* everything related to programming by contract has been moved into a new net.sf.oval.guard package
  * net.sf.oval.ParamenterNameResolverAspectJImpl: moved from package net.sf.oval.aspectj
  * net.sf.oval.guard.ApiUsageAuditor: moved from package net.sf.oval.aspectj
  * net.sf.oval.guard.ApiUsageAuditor2: moved from package net.sf.oval.aspectj
  * net.sf.oval.guard.GuardAspect: moved from package net.sf.oval.aspectj
  * net.sf.oval.guard.GuardAspect2: moved from package net.sf.oval.aspectj
  * net.sf.oval.guard.Guarded: moved from package net.sf.oval.guard
  * net.sf.oval.guard.IsGuarded: moved from package net.sf.oval
  * net.sf.oval.guard.PostValidateThis: moved from package net.sf.oval.annotations
  * net.sf.oval.guard.PreValidateThis: moved from package net.sf.oval.annotations
* replaced everything related to Guard.ReportingMode with Guard.isSupressSetterPreConditionExceptions and Guard.setSupressSetterPreConditionExceptions

2006-12-10 v0.8
===============
+ added JPAAnnotationsConfigurer to translate EJB3 JPA annotations into OVal constraints
	@javax.persistence.Basic(optional=false)      => @net.sf.oval.constraints.NotNull
	@javax.persistence.OneToOne(optional=false)   => @net.sf.oval.constraints.NotNull
	@javax.persistence.ManyToOne(optional=false)  => @net.sf.oval.constraints.NotNull
	@javax.persistence.Column(nullable=false)     => @net.sf.oval.constraints.NotNull
	@javax.persistence.Column(length=5)           => @net.sf.oval.constraints.Length
* changed the ant script to generate a maven2 bundle jar in the dist target
- AssertConstraintSet constraint was ignored when specified for getter methods' return value 
- NPE was thrown when validating objects against an XML based configuration that uses constraint sets
- various fixes regarding XML based configuration (thanks to tahura)
+ added more JUnit tests for the xml configuration
+ net.sf.oval.configuration.POJOConfigurer and all configuration elements are now serializable