@@ -23,8 +23,8 @@ import net.sf.oval.ConstraintViolation;
 import net.sf.oval.constraints.NotNullCheck;
 import net.sf.oval.contexts.ConstructorParameterContext;
 import net.sf.oval.contexts.MethodParameterContext;
-import net.sf.oval.exceptions.ConstraintsViolatedException;
 import net.sf.oval.exceptions.InvalidConfigurationException;
+import net.sf.oval.guard.ConstraintsViolatedException;
 import net.sf.oval.guard.Guarded;
 
 /**
