@@ -16,8 +16,8 @@ import junit.framework.TestCase;
 import net.sf.oval.ConstraintViolation;
 import net.sf.oval.constraints.NotNull;
 import net.sf.oval.contexts.FieldContext;
-import net.sf.oval.exceptions.ConstraintsViolatedException;
 import net.sf.oval.guard.ConstraintsViolatedAdapter;
+import net.sf.oval.guard.ConstraintsViolatedException;
 import net.sf.oval.guard.Guarded;
 import net.sf.oval.guard.PostValidateThis;
 import net.sf.oval.guard.PreValidateThis;
