@@ -19,7 +19,7 @@ import java.lang.annotation.RetentionPolicy;
 import java.lang.annotation.Target;
 
 import net.sf.oval.Constraint;
-import net.sf.oval.exceptions.ConstraintsViolatedException;
+import net.sf.oval.ConstraintViolation;
 
 /**
  * Check if the date is in the future
@@ -38,7 +38,7 @@ public @interface Future
 	/**
 	 * message to be used for the ContraintsViolatedException
 	 * 
-	 * @see ConstraintsViolatedException
+	 * @see ConstraintViolation
 	 */
 	String message() default "net.sf.oval.constraints.Future.violated";
 
